--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,30 @@
+title: 'Scott Cole'
+description: ''
+
+name: 'Scott Cole'
+url: https://srcole.github.io
+
 theme: jekyll-theme-cayman
+
+# Google analytics services
+google_analytics: UA-81645509-1
+
+# Social
+twitter:
+  username: scottrcole
+  card: summary
+github_username:      srcole
+twitter_username:      scottrcole
+
+# Build settings
+markdown: kramdown
+permalink: pretty
+
+highlighter: rouge
+kramdown:
+  input: GFM
+  auto_ids: true
+  syntax_highlighter: rouge
+
+gems:
+  - jekyll-seo-tag
