--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: ''
 name: 'Shama Barna'
 url: https://shama.github.io
 
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
 
 
 # Build settings
