--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: 'Shama Barna'
 description: ''
 
 name: 'Shama Barna'
-url: https://shama.github.io
+url: https://shamafarabi.github.io
 
 theme: jekyll-theme-cayman
 
